--- a/gsn/frontend/templates/frontend/index.html
+++ b/gsn/frontend/templates/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1>"
-  <title> Django and React project courtesy of Hunter & Ivan </title>
+  <title> Django and React project courtesy of Hunter & Ivan. </title>
 
   <body>
     <section class="section">
