minor stylistic changes

--- a/api/gsn_api/gsndb/templates/backend_dev_successful_upload.html
+++ b/api/gsn_api/gsndb/templates/backend_dev_successful_upload.html
@@ -7,7 +7,7 @@
       <h1>Upload Successful</h1>
       <p>Here's what you've uploaded:</p>
       <p>{{file_name}}</p>
-      <p>And here's the content the file handler generated from it.</p>
+      <p>And here's the content the file handler generated from it:</p>
       <p>{{content}}</p>
     </div>
   </body>
